2001-03-12  Jeff Freedman  <jeff@amy.nerble.net>

	* Timidity - Fixed bug that Willem Jan figured out.

2001-03-12  Wilem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.*: added new art to dependencies
	* Makefile.cygwin, files/utils.cc, cheat_screen.cc, configure.in: updated for Cygwin

2001-03-12  Max Horn  <max@quendi.de>
	* docs/faq/: added directory
	* docs/faq/exult_faq.xml: actual FAQ source (thanks to Dominik Reichardt!)
	* docs/faq/faqs.dtd: DTD for the FAQ
	* docs/faq/faq_html.xsl: XSL file to translate the XML FAQ to HTML
	* docs/faq/faq_text.xsl: XSL file to translate the XML FAQ to text. Not yet working correctly.

2001-03-11  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/cleaver.shp: more art from Adam Delman.
	* data/flx.in, Paperdoll_gump_info.cc, data/Makefile.am: added cleaver
	* data/gorget.shp, data/magicgorget.shp: updated

2001-03-11  Jeff Freedman  <jeff@amy.nerble.net>

	* Digital sound effects (from .wav's in a Flex file).

2001-03-11  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/(magic)gorget.shp: paperdoll art for gorget & magic gorget, created by Adam Delman. (Thanks!)
	* data/flx.in, gunps/Paperdoll_gump_info.cc: include new art
	* data/credits.txt: credit where credit is due

2001-03-11  Max Horn  <max@quendi.de>
	* docs/interview: added a lot of babble there ;) you all should ;)
	* actions.cc: added missing using directive
	* keys.cc: added missing using directive
	* files/utils.cc: added missing using directive
	* audio/midi_drivers/mac_midi.cc: removed some warnings (this file
	  is not doing anything)
	* audio/Audio.cc: fixed compilation error on MacOS (Metrowerks does
	  ANSI compliant type checking unlike gcc <g>)

2001-03-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* audio/Midi.h/cc: fixed no-midi-device-found bug
	* shp2pcx.cc: output origin
	* defaultkeys.txt: re-added change_skin
	* tools/.cvsignore: added shp2pcx, removed u7shp
	* fnames.h, gamedat.cc: changed savegame names to exultXXbg/si.sav